修改了onRemove锻星砧之间不会再串了，添加了天体资源和开采器巨构，天体预览框信息栏优化并添加资源栏，添加岩石行星的巨构